# openPMD-validator

./: .gitignore  .mailmap  .travis.yml  LICENSE.txt  README.md  RELEASING.md  checkOpenPMD_h5.py  convert_check_adios.sh  createExamples_h5.py  newVersion.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
conda_recipe/: Dockerfile  meta.yaml
openPMD_validator/: createExamples_h5.py
openpmd_validator/: check_h5.py  createExamples_h5.py
opmd_validator/: check_h5.py
