[metadata]
name = openPMD_validator
version = 1.0.0
url = https://github.com/openPMD/openPMD-validator
# author = ...  # TODO
# author_email = ...  # TODO
# maintainer = ...  # TODO
# maintainer_email = ...  # TODO
license = ISC
description = Validator and examples for openPMD format
classifier =
    # Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[files]
packages = openPMD_validator

[entry_points]
console_scripts =
    openPMD_check_h5 = openPMD_validator.check_h5:main
    openPMD_createExamples_h5 = openPMD_validator.createExamples_h5:main
